--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "version": "0.0.0",
   "main": "dist/compota.css",
   "license": "CC0-1.0",
-  "scripts": {},
+  "scripts": {
+    "dev": "next",
+    "generate": "next build && next export",
+    "build": "",
+    "clean": "rmtrash ./out ./.next"
+  },
   "homepage": "https://github.com/qrac/compota",
   "repository": "https://github.com/qrac/compota",
   "bugs": "https://github.com/qrac/compota/issues",
@@ -22,5 +27,26 @@
   "organization": {
     "name": "QRANOKO",
     "url": "https://qranoko.jp"
+  },
+  "browserslist": [
+    "last 1 Chrome versions",
+    "last 1 Edge versions",
+    "last 1 Firefox versions",
+    "last 1 Safari versions",
+    "last 1 iOS versions",
+    "last 1 ChromeAndroid versions"
+  ],
+  "devDependencies": {
+    "@mdx-js/loader": "^1.6.14",
+    "@next/mdx": "^9.5.0",
+    "autoprefixer": "^9.8.5",
+    "next": "^9.5.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-sort-media-queries": "^1.7.25",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "remark-custom-blocks": "^2.5.0",
+    "remark-slug": "^6.0.0",
+    "remark-toc": "^7.0.0"
   }
 }
