--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "scripts": {
     "dev": "next",
     "generate": "next build && next export",
-    "build": "",
-    "clean": "rmtrash ./out ./.next"
+    "build": "npm run build:css && npm run build:header && npm run build:postcss && npm run build:cleancss",
+    "build:css": "bash ./tasks/build-css.sh",
+    "build:header": "bash ./tasks/build-header.sh",
+    "build:postcss": "bash ./tasks/build-postcss.sh",
+    "build:cleancss": "bash ./tasks/build-cleancss.sh",
+    "clean": "rmtrash ./temp ./out ./.next"
   },
   "homepage": "https://github.com/qrac/compota",
   "repository": "https://github.com/qrac/compota",
@@ -40,13 +44,18 @@
     "@mdx-js/loader": "^1.6.14",
     "@next/mdx": "^9.5.0",
     "autoprefixer": "^9.8.5",
+    "clean-css-cli": "^4.3.0",
+    "concat": "^1.0.3",
     "next": "^9.5.0",
+    "postcss-cli": "^7.1.1",
     "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
     "postcss-sort-media-queries": "^1.7.25",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "remark-custom-blocks": "^2.5.0",
     "remark-slug": "^6.0.0",
-    "remark-toc": "^7.0.0"
+    "remark-toc": "^7.0.0",
+    "replace": "^1.2.0"
   }
 }
